--- a/app/views/join_table_item_carts/destroy.js.erb
+++ b/app/views/join_table_item_carts/destroy.js.erb
@@ -1,3 +1,6 @@
 document
   .querySelector('div[data-id="<%= @id %>"]')
   .remove()
+document
+  .querySelector('.cart-items-count')
+  .innerText = "(<%= @cart_items_count %>)"
