--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,12 @@
       <% end %>
        <%= link_to 'Mon Compte', myprofile_path, class: 'item' %>
       <% if current_user.cart.items.count > 0 %>
-        <%= link_to "Mon Panier (#{current_user.cart.items.count})", mycart_path, class: 'item' %>
+        <%= link_to mycart_path, class: 'item' do %>
+          Mon Panier
+          <span class="cart-items-count">
+            (<%= current_user.cart.items.count %>)
+          </span>
+        <% end %>
       <% else %>
         <%= link_to 'Mon Panier', cart_path(current_user.cart), class: 'item' %>
       <% end %>
