Total amount update

--- a/app/views/join_table_item_carts/destroy.js.erb
+++ b/app/views/join_table_item_carts/destroy.js.erb
@@ -4,3 +4,7 @@ document
 document
   .querySelector('.cart-items-count')
   .innerText = "(<%= @cart_items_count %>)"
+
+document
+  .querySelector('.cart-total-wrapper__amount')
+  .innerText = 'Total : <%= @total_amount %>€'
