--- a/app/views/join_table_item_carts/destroy.js.erb
+++ b/app/views/join_table_item_carts/destroy.js.erb
@@ -8,3 +8,15 @@ document
 document
   .querySelector('.cart-total-wrapper__amount')
   .innerText = 'Total : <%= @total_amount %>€'
+
+console.log(<%= @empty_cart %>)
+
+if (<%= @empty_cart %> === 0) {
+  document
+    .querySelector('.cart-items-wrapper')
+    .innerHTML = "<%= j render partial: 'carts/empty_cart' %>";
+
+  document
+    .querySelector('.cart-total-wrapper')
+    .innerHTML = '';
+}
