--- a/app/views/user_mailer/new_order_email.html.erb
+++ b/app/views/user_mailer/new_order_email.html.erb
@@ -9,7 +9,7 @@
     <p><%= @user.email %> vient de passer une nouvelle commande pour un montant total de : <%= @order.total_price %>€</p>
     <h6>Voici le détail de la commande :</h6>
     <% @order.items.each do |item| %>
-      </p><%= link_to "#{item.title}", item_path(item) %> (<%=item.price%> €) x<%=item.join_table_item_orders.find_by(order_id: @order.id).quantity%></p>
+      </p><%= link_to "#{item.title}", item.image_url %> (<%=item.price%> €) x<%=item.join_table_item_orders.find_by(order_id: @order.id).quantity%></p>
     <% end %>
     <p>Oh yeah!</p>
   </body>
