--- a/app/views/user_mailer/new_order_email.text.erb
+++ b/app/views/user_mailer/new_order_email.text.erb
@@ -8,7 +8,7 @@ Bonjour admin,
 Voici le détail de votre commande :
 
 <% @order.items.each do |item| %>
-  <%= link_to "#{item.title}", item_path(item) %> (<%=item.price%> €) x<%=item.join_table_item_orders.find_by(order_id: @order.id).quantity%>
+  <%= link_to "#{item.title}", item.image_url %> (<%=item.price%> €) x<%=item.join_table_item_orders.find_by(order_id: @order.id).quantity%>
 <% end %>
 
 Oh yeah !
