--- a/app/assets/stylesheets/pages/_admin-board.scss
+++ b/app/assets/stylesheets/pages/_admin-board.scss
@@ -17,4 +17,14 @@
       text-decoration: underline;
     }
   }
+
+  &__statistics {
+    padding-top: 1em;
+    margin-top: 1em;
+    border-top: 1px solid $lightgrey;
+
+    & h2, & p {
+      margin-bottom: 0.5em;
+    }
+  }
 }
