--- a/app/views/admin/board/index.html.erb
+++ b/app/views/admin/board/index.html.erb
@@ -5,4 +5,11 @@
     <li>Pour modifier un item : cliquez sur l'icone "modifier" située directement sur la <%= link_to 'liste des items', items_path %></li>
     <li>Pour supprimer un item : cliquez sur l'icone "supprimer" située directement sur la <%= link_to 'liste des items', items_path %></li>
   </ul>
+
+  <div class="admin-board-container__statistics">
+    <h2> Statistiques </h2>
+    <p> Nombre de commandes : <%= @orders.length %> </p>
+    <p> Chiffre d'affaires total : <% @orders.each { |i| @sum += i.total_price} %> <%= @sum %>€</p>
+    <p> Panier moyen : <%= @sum / @orders.length %>€</p>
+  </div>
 </div>
