sound design done

--- a/app/views/carts/_add_to_cart_btn.html.erb
+++ b/app/views/carts/_add_to_cart_btn.html.erb
@@ -9,7 +9,7 @@
       'Ajouter au panier',
       join_table_item_carts_path(id: item.id),
       method: "post",
-      class: 'btn',
+      class: 'btn add-to-cart',
       remote: true
     ) %>
   <% end %>
