--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,10 +7,10 @@
   </div>
 
   <div class="footer__column__2">
-    <%= link_to "A propos", "#", class:"footer__column__1--links" %>
-    <%= link_to "Nos projets", "#", class:"footer__column__1--links" %>
-    <%= link_to "Foire Aux Questions", "#", class:"footer__column__1--links" %>
-    <%= link_to "Nous contacter", "#", class:"footer__column__1--links" %>
+    <%= link_to "A propos", "#", class:"footer__column__1--links", 'data-sound': 'link-1' %>
+    <%= link_to "Nos projets", "#", class:"footer__column__1--links", 'data-sound': 'link-2' %>
+    <%= link_to "Foire Aux Questions", "#", class:"footer__column__1--links", 'data-sound': 'link-3' %>
+    <%= link_to "Nous contacter", "#", class:"footer__column__1--links", 'data-sound': 'link-4' %>
   </div>
 
   <div class="footer__column__3">
