--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,10 @@
     </div>
     <%= render 'layouts/footer' %>
 
+    <%= render 'layouts/audios' %>
+
     <%= javascript_include_tag 'navbar' %>
+    <%= javascript_include_tag 'sounds' %>
     <script src="https://js.stripe.com/v3/"></script>
     <script type="module" src="//unpkg.com/@grafikart/drop-files-element"></script>
   </body>
