Changement du bouton créer en bouton éditer dans le formulaire d'edition

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -27,7 +27,7 @@
         <%= f.text_field :image_url, class: "form-control", placeholder: "https://..." %>
       </div>
       <div class="text-center">
-        <%= f.submit "Créer", class: "btn" %>
+        <%= f.submit "Editer", class: "btn" %>
       </div>
     <%end%>
   </div>
