--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -142,6 +142,7 @@
 
     &--description {
       padding: 1rem 0;
+      margin: 0.5em 0 0;
       max-width: 20rem;
       border-bottom: 1px solid $lightgrey;
       border-top: 1px solid $lightgrey;
