--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -17,6 +17,7 @@
       object-fit: cover;
       height: 100%;
       width: auto;
+      aspect-ratio: 1/1;
       transform: scale(1);
       transition: all .5s ease;
 
