--- a/app/assets/stylesheets/modules/_flash.scss
+++ b/app/assets/stylesheets/modules/_flash.scss
@@ -22,6 +22,7 @@
 @keyframes fadeOut {
   0% {
     opacity: 1;
+    z-index: 100;
     display: block;
   }
   99% {
@@ -30,6 +31,7 @@
   }
   100% {
     opacity: 0;
+    z-index: -1;
     display: none!important;
   }
 
