--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,3 +1,7 @@
+<div class="show-card__menu">
+  <%= link_to "Retour", items_path %>
+</div>
+
 <div class="form-page">
   <div class="form-page__form">
     <h1>Modification d'un item</h1>
