--- a/app/views/myprofiles/edit.html.erb
+++ b/app/views/myprofiles/edit.html.erb
@@ -17,5 +17,7 @@
       </div>
     <% end %>
     <%= link_to 'Editer mon Email / Mot de Passe', edit_user_registration_path(@user) %>
+    <br/>
+    <%= link_to "Retour", myprofile_path(@user) %>
   </div>
 </div>
