--- a/app/views/mycarts/show.html.erb
+++ b/app/views/mycarts/show.html.erb
@@ -3,5 +3,18 @@
             partial: 'cart_item',
             locals: { cart: @cart }
           ) %>
+    
+    <% if ( Item.all.count > 3 ) %>
+    <%= render(
+          partial: 'item_card_recommendations',
+          locals: { items: @items }
+        ) %>
+    <% end %>
+    
+    <div class="show-card__menu">
+      <%= link_to "Retour", items_path %>
+      <br/><br/>
+    </div>
+
 </div>
 
